tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_8.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := (~ (((x DIV 1223) = (1223 DIV 1)) OR ((- 1) = (2 DIV z))));
               p := (((- (1 * 2)) * (- (y + 1223))) > (((0 DIV 1) * (+ 2)) - (- (+ 200))));
               p := (((- (1 * z)) DIV (+ (- 1223))) >= (((+ 0) + (y - 1)) - ((200 DIV 2) - (0 - 200))));
               p := ((((200 MOD 0) * (0 * z)) MOD ((+ 200) DIV (z + x))) # (- (- (z + z))));
  (* error *)  z := (((- (q + x)) * ((x MOD 0) + (1 * x))) + (((- 0) - (z MOD y)) DIV (+ (1 + 0))));
               p := ((((z - 0) + (+ 2)) >= ((1223 + 200) MOD (+ x))) OR (((r & r) OR (200 < y)) & (~ (~ r))));
               y := ((+ ((x - 2) + (y + z))) - ((- (0 MOD z)) MOD ((0 MOD 200) MOD (200 MOD 1))));
               r := ((((2 MOD x) DIV (y * z)) + (+ (y MOD x))) # (((+ 0) DIV (1 DIV 1223)) MOD ((+ 0) + (0 + x))));
               q := (((+ (x MOD 1223)) MOD (- (0 MOD 2))) > (((1 * 2) - (200 + x)) + ((0 DIV 200) - (200 + 200))));
               q := ((((1 - 1) * (0 + 1)) * ((2 * 0) - (2 + z))) # (((y MOD x) - (1 MOD z)) DIV ((1223 DIV 0) * (1223 - y))))
END Test15.